<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bitdecay</groupId>
    <!-- TODO -->
    <artifactId>project-name</artifactId>
    <version>1.0</version>
    <name>project-name</name>
    <description>project description...</description>

    <packaging>jar</packaging>

    <properties>
        <!-- TODO: put the actual main launcher class in here -->
        <mainClass>com.bitdecay.game.Launcher</mainClass>

        <!-- these will change based on what the current version of the tools are -->
        <jumpVersion>2.0</jumpVersion>
        <animagicVersion>1.0</animagicVersion>

        <!-- these probably shouldn't change much -->
        <gdxVersion>1.6.5</gdxVersion>
        <log4jVersion>1.2.17</log4jVersion>
        <jacksonVersion>2.6.1</jacksonVersion>
        <commonsVersion>2.4</commonsVersion>
    </properties>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <id>Executable Shade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainClass}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals><goal>launch4j</goal></goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>target/${project.artifactId}-${project.version}.exe</outfile>
                            <jar>target/${project.artifactId}-${project.version}.jar</jar>
                            <errTitle>${project.name}</errTitle>
                            <classPath>
                                <mainClass>${mainClass}</mainClass>
                                <addDependencies>false</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <icon>src/main/resources/img/standalone/icon/windowsIcon.ico</icon>
                            <singleInstance>
                                <mutexName>${project.name}</mutexName>
                                <windowTitle>${project.name}</windowTitle>
                            </singleInstance>
                            <jre>
                                <minVersion>1.8.0</minVersion>
                                <opts>
                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>${project.version}.0.0</fileVersion>
                                <txtFileVersion>${project.version}</txtFileVersion>
                                <fileDescription>${project.description}</fileDescription>
                                <copyright>Byte Break Studios LLC 2016</copyright>
                                <productVersion>${project.version}.0.0</productVersion>
                                <txtProductVersion>${project.version}</txtProductVersion>
                                <productName>${project.name}</productName>
                                <internalName>${project.name}</internalName>
                                <originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
                                <language>ENGLISH</language>
                            </versionInfo>
                            <messages>
                                <startupErr>Could not start up</startupErr>
                                <bundledJreErr>Bundled Jre error</bundledJreErr>
                                <jreVersionErr>Incompatible Jre version error</jreVersionErr>
                                <launcherErr>Launcher error</launcherErr>
                                <!-- Used by console header only. -->
                                <instanceAlreadyExistsMsg>Instance already exists</instanceAlreadyExistsMsg>
                            </messages>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>package</phase>
                        <goals><goal>single</goal></goals>
                        <configuration>
                            <descriptors>
                                <descriptor>assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- START LOGGING -->
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <!-- END LOGGING -->
        <!-- Why do we need these jackson imports? animagic should bring them in... confusing -->
        <!-- START JACKSON DEPENDENCIES -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jacksonVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jacksonVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jacksonVersion}</version>
        </dependency>
        <!-- END JACKSON DEPENDENCIES -->
        <!-- START CONFIG DEPENDENCIES -->
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>1.3.0</version>
        </dependency>
        <!-- END CONFIG DEPENDENCIES -->
        <!-- START CUSTOM TOOLS DEPENDENCIES -->
        <dependency>
            <groupId>com.bitdecay</groupId>
            <artifactId>jump-common</artifactId>
            <version>${jumpVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.bitdecay</groupId>
            <artifactId>jump-core</artifactId>
            <version>${jumpVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.bitdecay</groupId>
            <artifactId>jump-gdx</artifactId>
            <version>${jumpVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.bitdecay</groupId>
            <artifactId>jump-leveleditor</artifactId>
            <version>${jumpVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.bytebreakstudios</groupId>
            <artifactId>animagic</artifactId>
            <version>${animagicVersion}</version>
        </dependency>
        <!-- END CUSTOM TOOLS DEPENDENCIES-->
        <!-- START GDX DEPENDENCIES -->
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-lwjgl</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-jglfw</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-headless</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-controllers</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-controllers-desktop</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-tools</artifactId>
            <version>${gdxVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-controllers-platform</artifactId>
            <version>${gdxVersion}</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-platform</artifactId>
            <version>${gdxVersion}</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <!-- END GDX DEPENDENCIES -->
    </dependencies>
</project>